--- a/WiFiAPScanner/app/src/main/res/layout/activity_main.xml
+++ b/WiFiAPScanner/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,10 @@
         android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Scan once"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="31dp" />
+        app:layout_constraintTop_toBottomOf="@+id/distanceText"
+        tools:layout_editor_absoluteX="31dp" />
 
     <Button
         android:id="@+id/button3"
@@ -31,5 +32,24 @@
         android:text="Turn Periodic Scan On"
         app:layout_constraintTop_toBottomOf="@+id/button"
         tools:layout_editor_absoluteX="31dp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Scan and send to server"
+        app:layout_constraintTop_toBottomOf="@+id/button3"
+        tools:layout_editor_absoluteX="31dp" />
+
+    <EditText
+        android:id="@+id/distanceText"
+        android:layout_width="159dp"
+        android:layout_height="49dp"
+        android:ems="10"
+        android:hint="Enter distance (m)"
+        android:inputType="number|numberDecimal"
+        tools:layout_editor_absoluteX="31dp"
+        tools:layout_editor_absoluteY="26dp" />
 
 </android.support.constraint.ConstraintLayout>
